Update README.md with instructions and Demo.png image